FIX: food menu slider issue position on mobile

--- a/css/styles.css
+++ b/css/styles.css
@@ -775,7 +775,7 @@
 }
 .ourFoods #menu-swipper .swiper-button-prev {
   left: auto;
-  top: 650px;
+  top: 590px;
   right: var(--swiper-navigation-sides-offset, 60px);
 }
 @media (min-width: 1000px) {
@@ -785,7 +785,7 @@
   }
 }
 .ourFoods #menu-swipper .swiper-button-next {
-  top: 650px;
+  top: 590px;
   right: 20px;
 }
 @media (min-width: 1000px) {
